fix: resolve all integration test failures and remove dead code
- Remove Gson dependency from Panama module, replace with manual JSON
  parsing for module imports/exports and WAST result parsing
- Register missing wasmtime4j_panama_module_get_all_functions binding
- Add GC ref type support (codes 7-14) to JNI global creation
- Fix JNI global type reporting to return correct GC heap type strings
  instead of defaulting all to "anyref"
- Fix JNI call hook implementation with full callback mechanism
- Fix JNI memory getSize to query live store instead of cached metadata
- Fix JNI table grow to return -1 instead of throwing at max
- Fix bracket-aware JSON splitting for module metadata parsing
- Add wasmparser-based GlobalSection/MemorySection/TableSection extraction
- Fix case-insensitive DNS host matching per RFC 4343
- Fix WasiPreview2Test to use hasWasiPreview2Imports for P2 linkers
- Skip unsupported global types (ExnRef/ContRef) in tests
- Extract shared abstract classes to eliminate JNI/Panama duplication:
  AbstractFuncType, AbstractWasiContextBuilder, AbstractWasiHttpStats,
  AbstractWitInterfaceDefinition, DefaultPoolStatistics,
  DefaultWasiConfig/Builder
- Remove dead code: stale scripts, orphaned examples, unused CI workflows,
  Mockito/SLF4J version properties
- Migrate Panama FFI error handling from ffi_boundary macros to ffi_try
- Move heap_type conversion functions to ffi_common